# CalCount

./: Cal.json  Food.ipynb  Food_model.keras  Procfile  app.py  pyproject.toml  requirements.txt
